--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,3 +147,22 @@ hr {
     color: black;
 }
 
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+    .mainrow {   
+      flex-direction: column;
+    }
+  }
+  
+  @media screen and (max-width: 960px) {
+      .flex-container{
+          flex-direction: column;
+
+      }
+    }
+
+    @media  screen and (max-width: 1144px) {
+        .header {
+            text-align: center;
+        }
+    }
