--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,6 +88,7 @@ to create a flex div container, the display flex must be diclare first in the pa
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 20px;
     margin: 10px;
+    border-radius: 1rem;
 
 }
 
@@ -110,6 +111,7 @@ to create a flex div container, the display flex must be diclare first in the pa
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: black;
     padding: 20px;
+    border-radius: 1rem;
 }
 
 /* targeting the tilles i the skill section of the web to make them italic */
@@ -140,6 +142,7 @@ hr {
     padding: 30px;
     margin-top: 1rem;
     text-align: center;
+    border-radius: 1rem;
     color: black;
 }
 
