--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,6 +154,7 @@ hr {
 @media screen and (max-width: 700px) {
     .mainrow {   
       flex-direction: column;
+      width: fit-content;
     }
   }
   
