--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,6 +52,7 @@ p {
     background-color: #214252;
     font-style: oblique;
     padding: 100px;
+    border-radius: 100px;
     text-align: center;
     color: #f8ede3;
     margin-bottom: 2rem;
