--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,15 +5,20 @@ body {
     background-color: #f8ede3;
     margin: 5rem 5rem;
 }
+@media  screen and (max-with: 365px) {
+   body {
+       margin: 1.5rem;
+   }
+}
 /* Style the h1 element */
 
 h1 {
-    font-size: 100px;
+    font-size: 3.5rem;
 }
 
 /* the size text that is below my name in the header section */
 .header p {
-    font-size: 35px;
+    font-size: 4rem;
 
 }
 
