--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,18 @@ h1 {
 
 }
 
+@media  screen and (max-width: 700px) {
+    .header h1 {
+        font-size: 2rem;
+    }
+    
+}
+
+@media  screen and (max-width: 700px) {
+    .header p {
+        font-size: 2.5rem;
+    }
+
 h2, h3 {
     color: #214252
 }
