--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,7 +84,8 @@ div.aboutme {
     width: 400;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 1rem;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* certification css element with flex
