--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,6 +86,7 @@ div.aboutme {
     padding: 1rem;
     margin-top: 20px;
     margin-bottom: 20px;
+    border-radius: 1rem;
 }
 
 /* certification css element with flex
