--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,15 +67,18 @@ p {
 
 /* style for banner*/
 .header {
-    background-color: #214252;
+    background-color: #f8ede3;
+/*     background-color: #214252; */
     font-style: oblique;
-    padding: 100px;
+    padding: 10px;
+/*     padding: 100px; */
     border-radius: 100px;
     text-align: center;
-    color: #f8ede3;
+    color: #214252;
+/*     color: #f8ede3; */
     margin-bottom: 2rem;
     outline-color: #a0c1bb;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+/*     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     
 }
 
